# mindreader.github.io

./: feed.xml  index.html.bak
about/: index.html
lens-slides/: index.html  lens-slides.cabal
lens-slides/public/highlight/: highlight.pack.js
lens-slides/src/: Lib.hs  Snippets.hs
lens-slides/test/: Scratch.hs
pipes-slides/: index.html  pipes-slides.cabal  stack.yaml
pipes-slides/app/: Main.hs
pipes-slides/src/: JS.hs  Lib.hs  Pres.hs  Snippets.hs
programming/2015/02/25/: xml_parsing_using_lenses.html
src/: cl.xml  rhaskell.html
