name:                lens-slides
version:             1.0.0.0
synopsis:            Slides for a presentation on the lens library
homepage:            https://github.com/mindreader/lens-slides
license:             BSD3
license-file:        LICENSE
author:              David McHealy
maintainer:          david.mchealy@gmail.com
copyright:           2016 David McHealy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, JS, Snippets
  build-depends:       base >= 4.7 && < 5
                     , lucid >= 2.9.5 && <= 3.0
                     , jmacro >= 0.6.14 && <= 0.8
                     , text >= 1.2 && < 1.4
                     , wl-pprint-text >= 1.1 && < 2.0
                     , string-qq == 0.0.2
  default-language:    Haskell2010
  ghc-options: -Wall

executable lens-slides
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens-slides
  default-language:    Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/mindreader/lens-slides
